# controle-exibicao

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  upload_page.html
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: compilador_zoom_bot.bat  zoom_bot.py
src-tauri/src/: lib.rs  main.rs  state.rs
src/components/: CountdownTimer.tsx  Timer.tsx
src/hooks/: useWebSocket.ts
src/pages/: AdminPage.tsx  ControlPage.tsx  DisplayPage.tsx  SettingsPage.tsx
src/store/: useAppStore.ts
src/styles/: global.css
