[package]
name = "controle-exibicao"
version = "0.1.0"
description = "Sistema de Controle de Exibição para Reuniões"
authors = ["Caio Eduardo"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
uuid = { version = "1", features = ["v4"] }
sled = "0.34"
image = "0.24"
futures-util = "0.3"
