[package]
name = "controle-exibicao"
version = "0.1.0"
description = "Sistema de Controle de Exibição para Reuniões"
authors = ["Caio Eduardo"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
sled = "0.34"
image = "0.24"
futures-util = "0.3"
tokio-tungstenite = "0.21"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase"] }
warp = "0.3"
rust-embed = "8"
mime_guess = "2"
